--- a/src/css/style.css
+++ b/src/css/style.css
@@ -14,7 +14,7 @@
     --h2-text-size: 4rem;
     --h3-text-size: 3rem;
     --h4-text-size: 2rem;
-    --h5-text-size: 5.25rem;
+    --h5-text-size: 1.5rem;
 
     --p1-text-size: 20px;
     --p2-text-size: 18px;
@@ -22,6 +22,11 @@
 
 .spc-5 {
     margin-bottom: 5rem;
+}
+
+#logo {
+    margin-left: 1rem;
+        height: 35px;
 }
 
 header {
@@ -37,6 +42,12 @@ nav {
     height: 3.9375rem;
     flex-shrink: 0;
     border-radius: 1rem;
+}
+
+@media (min-width: 1800px) {
+    nav {
+        width: 100rem;
+    }
 }
 
 #main-image, .container__about img {
@@ -92,10 +103,25 @@ footer a, footer p{
     width: 50px;
 }
 
-.corner-image {
+.corner-image--right {
     position: absolute;
     top: -100px; 
     right: -120px; 
+    z-index: 2; 
+}
+
+.corner-image--left {
+    position: absolute; 
+    left: -110px;
+    top: -90px; 
+    z-index: 2; 
+}
+
+.corner-image--top-left
+{
+    position: absolute; 
+    left: -30px;
+    top: -90px; 
     z-index: 2; 
 }
 
@@ -104,4 +130,12 @@ footer a, footer p{
     border-radius: 36px;
     border: none;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.skills__col--first {
+    color: white;
+    font-size: var(--h5-text-size);
+    font-weight: 300;
+    text-align: left;
+    margin-left: 6rem;
 }
