--- a/src/css/headings/headings.css
+++ b/src/css/headings/headings.css
@@ -9,7 +9,7 @@ h1 {
 }
 
 h2 {
-    font-size: var(--h3-text-size);
+    font-size: var(--h2-text-size);
     color: var(--primary-text-color);
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
@@ -17,7 +17,9 @@ h2 {
 
 h3 {
     font-size: var(--h3-text-size);
-    color: var(--primary-text-color);
-    font-family: 'Poppins', sans-serif;
-    font-weight: bold;
+}
+
+h4 {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: 300;
 }
