--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,17 +4,16 @@
 
 :root {
     --primary-text-color: #181E4B;
-    --secondary-text-color: #FF0191;
+    --secondary-text-color: #c70071;
 
 
     --primary-background-color: #FAFAFA;
     --secondary-background-color: #393939;
 
     --h1-text-size: 4.8rem;
-    --h2-text-size: 4rem;
-    --h3-text-size: 3rem;
-    --h4-text-size: 2rem;
-    --h5-text-size: 1.5rem;
+    --h2-text-size: 3rem;
+    --h3-text-size: 1.4rem;
+    --h4-text-size: 1.0rem;
 
     --p1-text-size: 20px;
     --p2-text-size: 18px;
@@ -58,6 +57,10 @@ nav {
 main p {
     font-family: 'Fredoka', sans-serif;
     font-size: var(--p1-text-size);
+}
+
+#logo {
+    height: 60px;
 }
 
 #colored {
@@ -120,7 +123,7 @@ footer a, footer p{
 .corner-image--top-left
 {
     position: absolute; 
-    left: -30px;
+    left: -20px;
     top: -90px; 
     z-index: 2; 
 }
@@ -138,4 +141,9 @@ footer a, footer p{
     font-weight: 300;
     text-align: left;
     margin-left: 6rem;
+}
+
+.navbar a {
+    color: black !important;
+    font-weight: 500;
 }
