--- a/src/css/buttons/buttons.css
+++ b/src/css/buttons/buttons.css
@@ -10,6 +10,13 @@
     font-weight: 700;
 }
 
+@media (min-width: 425px) {
+    .btn--primary {
+        padding: 0.5rem 0.5rem;
+    }
+}
+
+
 .btn--primary--xl {
     width: 100%;
     padding: 0.75rem 0.5rem;
