--- a/src/css/headings/headings.css
+++ b/src/css/headings/headings.css
@@ -8,7 +8,7 @@ h1 {
     font-weight: bold;
 }
 
-h2 {
+h2, h5 {
     font-size: var(--h2-text-size);
     color: var(--primary-text-color);
     font-family: 'Poppins', sans-serif;
@@ -22,4 +22,19 @@ h3 {
 h4 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
+}
+
+@media (max-width: 425px) {
+     h1 {
+        font-size: var(--main-mobile-text-size); 
+     }
+     h2 {
+        font-size: var(--mobile-text-size); 
+        text-align: left !important;
+    }
+
+    h3 {
+        font-size: 20px; 
+        text-align: left !important;
+    }
 }
