Revert "Mobile screen update"
This reverts commit 17771c3ac0ef34994cf4d201ebcea3c197609ac1.

--- a/src/css/buttons/buttons.css
+++ b/src/css/buttons/buttons.css
@@ -10,6 +10,11 @@
     font-weight: 700;
 }
 
+@media (min-width: 425px) {
+    .btn--primary {
+        padding: 0.5rem 0.5rem;
+    }
+}
 
 
 .btn--primary--xl {
