--- a/src/css/headings/headings.css
+++ b/src/css/headings/headings.css
@@ -24,10 +24,11 @@ h4 {
     font-weight: 300;
 }
 
-@media (max-width: 426px) {
+@media (max-width: 768px) {
      h1 {
         font-size: var(--main-mobile-text-size); 
      }
+     
      h2 {
         font-size: var(--mobile-text-size); 
         text-align: left !important;
@@ -35,6 +36,10 @@ h4 {
 
     h3 {
         font-size: 20px; 
+        text-align: left !important;
+    }
+    h5 {
+        font-size: var(--mobile-text-size); 
         text-align: left !important;
     }
 }
