--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,7 @@
     --h4-text-size: 1.0rem;
 
     --main-mobile-text-size: 2.7rem;
-    --mobile-text-size: 2.1rem;
+    --mobile-text-size: 2rem;
 
     --p1-text-size: 20px;
     --p2-text-size: 18px;
@@ -122,6 +122,13 @@ main p {
        display: none;
     }
 }   
+
+@media (max-width: 768px) {
+    .cover__img {
+        width: 350px !important;
+        height: 300px !important;
+    }
+}  
 
 #logo {
     height: 35px;
@@ -273,13 +280,10 @@ nav a {
     font-weight: 500;
 }
 
-/* Add this CSS to your stylesheet */
-
-/* Navbar links */
 .navbar-nav a {
     position: relative;
     text-decoration: none;
-    color: #333; /* Change the color to your preference */
+    color: #333; 
     transition: color 0.3s;
 }
 
@@ -287,22 +291,20 @@ nav a {
     color: var(--secondary-background-color) !important;
 }
 
-/* Underline container */
 .navbar-nav a::before {
     content: "";
     display: block;
     width: 0;
-    height: 2px; /* Change the thickness to your preference */
-    background-color: var(--tertiary-text-color); /* Change the color to your preference */
+    height: 2px;
+    background-color: var(--tertiary-text-color); 
     position: absolute;
     bottom: 5px;
     left: 5px;
     transition: width 0.3s;
 }
 
-/* Underline effect on hover */
 .navbar-nav a:hover::before {
-    width: 75%; /* Change the width to control the underline length */
+    width: 75%; 
 }
 
 
