--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,9 +64,42 @@ nav {
     }
 }
 
-main p {
-    font-family: 'Fredoka', sans-serif;
-    font-size: var(--p1-text-size);
+nav a {
+    color: black !important;
+    font-weight: 500;
+
+}
+
+.navbar-nav a {
+    position: relative;
+    text-decoration: none;
+    color: #333; 
+    transition: color 0.3s;
+}
+
+.navbar-nav a:hover {
+    color: var(--secondary-background-color) !important;
+}
+
+.navbar-nav a::before {
+    content: "";
+    display: block;
+    width: 0;
+    height: 2px;
+    background-color: var(--tertiary-text-color); 
+    position: absolute;
+    bottom: 5px;
+    left: 5px;
+    transition: width 0.3s;
+}
+
+.navbar-nav a:hover::before {
+    width: 75%; 
+}
+
+@media (max-width: 768px) {
+    .navbar-nav a:hover::before  {
+        width: 0;     }
 }
 
 @media (min-width: 1800px) {
@@ -74,6 +107,12 @@ main p {
         width: 100rem;
     }
 }
+
+main p {
+    font-family: 'Fredoka', sans-serif;
+    font-size: var(--p1-text-size);
+}
+
 
 .container__about {
     display: flex;
@@ -272,41 +311,6 @@ iframe {
         margin-left: 0;
     }
 }
-
-
-
-nav a {
-    color: black !important;
-    font-weight: 500;
-}
-
-.navbar-nav a {
-    position: relative;
-    text-decoration: none;
-    color: #333; 
-    transition: color 0.3s;
-}
-
-.navbar-nav a:hover {
-    color: var(--secondary-background-color) !important;
-}
-
-.navbar-nav a::before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 2px;
-    background-color: var(--tertiary-text-color); 
-    position: absolute;
-    bottom: 5px;
-    left: 5px;
-    transition: width 0.3s;
-}
-
-.navbar-nav a:hover::before {
-    width: 75%; 
-}
-
 
 
 
