--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,6 +49,14 @@ header {
     }
 }
 
+.skill {
+   color: white;
+   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   font-size: 20px;
+   padding: 1rem;
+   font-weight: 400;
+}
+
 
 nav {
     background-color: white;
@@ -312,5 +320,12 @@ iframe {
     }
 }
 
+.socials__container a{
+    color: black;
+    font-weight: 500;
+}
 
 
+.socials__container a:hover{
+    text-decoration: none !important;
+}
