--- a/src/css/headings/headings.css
+++ b/src/css/headings/headings.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins:wght@100;400;800&display=swap');
-
-h1 {
+@import url('../style.css');
+h1, .h1 {
     font-size: var(--h1-text-size);
     color: var(--primary-text-color);
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
 }
 
-h2, h5 {
+h2, h5, .h2, .h5 {
     font-size: var(--h2-text-size);
     color: var(--primary-text-color);
     font-family: 'Poppins', sans-serif;
@@ -42,4 +42,9 @@ h4 {
         font-size: var(--mobile-text-size); 
         text-align: left !important;
     }
+}
+
+.p {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
 }
