--- a/src/css/headings/headings.css
+++ b/src/css/headings/headings.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins:wght@100;400;800&display=swap');
 @import url('../style.css');
+
 h1, .h1 {
     font-size: var(--h1-text-size);
     color: var(--primary-text-color);
@@ -15,36 +16,49 @@ h2, h5, .h2, .h5 {
     font-weight: bold;
 }
 
-h3 {
+h3,
+.h3 {
     font-size: var(--h3-text-size);
 }
 
-h4 {
+h4,
+.h4 {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
 }
 
 @media (max-width: 768px) {
-     h1 {
+     h1, 
+     .h1 {
         font-size: var(--main-mobile-text-size); 
      }
      
-     h2 {
+     h2,
+     .h2 {
         font-size: var(--mobile-text-size); 
         text-align: left !important;
     }
 
-    h3 {
+    h3,
+    .h3 {
         font-size: 20px; 
         text-align: left !important;
     }
-    h5 {
+    h5,
+    .h5 {
         font-size: var(--mobile-text-size); 
         text-align: left !important;
     }
 }
 
-.p {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
+.p1 {
+    font-family: 'Fredoka', sans-serif;
+    font-size: var(--p1-text-size);
 }
+
+.p2 {
+    font-family: 'Fredoka', sans-serif;
+    font-size: var(--p2-text-size);
+    line-height: 1.8rem;
+}
+
