--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,14 @@
     margin-bottom: 5rem;
 }
 
-header {
+.corner-image--top-left {
+    @media (max-width: 468px) {
+        display: none;
+    }
+}
+
+header, 
+.header {
     margin-top: 2rem;
     display: flex;
     align-items: center;
@@ -35,7 +42,8 @@ header {
 }
 
 @media (max-width: 468px) {
-    header { 
+    header, 
+    .header { 
         margin-top: 0;
         display: block;
         align-items: initial;
@@ -43,22 +51,8 @@ header {
     }
 }
 
-.corner-image--top-left {
-    @media (max-width: 468px) {
-        display: none;
-    }
-}
-
-.skill {
-   color: white;
-   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-   font-size: 20px;
-   padding: 1rem;
-   font-weight: 400;
-}
-
-
-nav {
+nav, 
+.navbar {
     background-color: white;
     flex-shrink: 0;
     border-radius: 1rem;        
@@ -66,16 +60,21 @@ nav {
 }
 
 @media (max-width: 468px) {
-    nav { 
+    nav,
+    .navbar { 
         border-radius: 0; 
         width: 100%;
     }
 }
 
-nav a {
+nav a,
+.nav-item--a {
     color: black !important;
     font-weight: 500;
+}
 
+.nav-item--a {
+    padding: 0.75rem 1rem;
 }
 
 .navbar-nav a {
@@ -138,6 +137,10 @@ main p {
     margin: 10rem 0 !important;
 }
 
+.offset-bt--10 {
+    margin-bottom: 10rem !important;
+}
+
 .offset-bt {
     margin-bottom: 2rem !important;
 }
@@ -177,9 +180,11 @@ main p {
     }
 }  
 
-#logo {
+#logo,
+#logo--a {
     height: 35px;
     margin-left: 2rem;
+    margin-right: 1rem;
 }
 
 @media (max-width: 468px) {
@@ -214,6 +219,15 @@ main p {
     min-height: 150px !important;
     border-radius: 36px;
 }
+
+
+.skill {
+    color: white;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 20px;
+    padding: 1rem;
+    font-weight: 400;
+ }
 
 .skills {
     background-color: var(--secondary-background-color);
@@ -328,4 +342,23 @@ iframe {
 
 .socials__container a:hover{
     text-decoration: none !important;
+}
+
+
+.container-fluid.footer__container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-area {
+    height: 5rem;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+}
+
+.footer__a {
+    color: white;
+    padding: 0.5rem 1rem;
 }
