CSS folder structure refactor

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,364 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Fredoka&family=Poppins:wght@100;400;800&display=swap');
-
-
-:root {
-    --primary-text-color: #181E4B;
-    --secondary-text-color: #c70071;
-    --tertiary-text-color: #0997D9; 
-
-
-    --primary-background-color: #FAFAFA;
-    --secondary-background-color: #393939;
-
-    --h1-text-size: 4.8rem;
-    --h2-text-size: 3rem;
-    --h3-text-size: 1.4rem;
-    --h4-text-size: 1.0rem;
-
-    --main-mobile-text-size: 2.7rem;
-    --mobile-text-size: 2rem;
-
-    --p1-text-size: 20px;
-    --p2-text-size: 18px;
-}
-
-.spc-5 {
-    margin-bottom: 5rem;
-}
-
-.corner-image--top-left {
-    @media (max-width: 468px) {
-        display: none;
-    }
-}
-
-header, 
-.header {
-    margin-top: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-@media (max-width: 468px) {
-    header, 
-    .header { 
-        margin-top: 0;
-        display: block;
-        align-items: initial;
-        justify-content: initial;
-    }
-}
-
-nav, 
-.navbar {
-    background-color: white;
-    flex-shrink: 0;
-    border-radius: 1rem;        
-    width: 90%;
-}
-
-@media (max-width: 468px) {
-    nav,
-    .navbar { 
-        border-radius: 0; 
-        width: 100%;
-    }
-}
-
-nav a,
-.nav-item--a {
-    color: black !important;
-    font-weight: 500;
-}
-
-.nav-item--a {
-    padding: 0.75rem 1rem;
-}
-
-.navbar-nav a {
-    position: relative;
-    text-decoration: none;
-    color: #333; 
-    transition: color 0.3s;
-}
-
-.navbar-nav a:hover {
-    color: var(--secondary-background-color) !important;
-}
-
-.navbar-nav a::before {
-    content: "";
-    display: block;
-    width: 0;
-    height: 2px;
-    background-color: var(--tertiary-text-color); 
-    position: absolute;
-    bottom: 5px;
-    left: 5px;
-    transition: width 0.3s;
-}
-
-.navbar-nav a:hover::before {
-    width: 75%; 
-}
-
-@media (max-width: 768px) {
-    .navbar-nav a:hover::before  {
-        width: 0;     }
-}
-
-@media (min-width: 1800px) {
-    nav {
-        width: 100rem;
-    }
-}
-
-main p {
-    font-family: 'Fredoka', sans-serif;
-    font-size: var(--p1-text-size);
-}
-
-
-.container__about {
-    display: flex;
-}
-
-@media (max-width: 468px) {
-    .container__about {
-        display: flex !important;
-        flex-direction: column-reverse !important;
-    }
-}
-
-
-.offset {
-    margin: 10rem 0 !important;
-}
-
-.offset-bt--10 {
-    margin-bottom: 10rem !important;
-}
-
-.offset-bt {
-    margin-bottom: 2rem !important;
-}
-
-@media (max-width: 468px) {
-    .offset {
-        margin: 3rem 0 !important;
-    }
-
-    .offset-sm {
-        margin: 1.5rem 0.5rem;
-    }
-}   
-
-@media (max-width: 468px) {
-    .skills__heading {
-        text-align: center;
-    }
-}   
-
-
-.cover__img {
-    width: 450px !important;
-    height: 400px !important;
-}
-
-@media (max-width: 468px) {
-    .cover__img {
-       display: none;
-    }
-}   
-
-@media (max-width: 768px) {
-    .cover__img {
-        width: 350px !important;
-        height: 300px !important;
-    }
-}  
-
-#logo,
-#logo--a {
-    height: 35px;
-    margin-left: 2rem;
-    margin-right: 1rem;
-}
-
-@media (max-width: 468px) {
-    #logo { 
-        margin-left: 0;
-        height: 28px;
-    }
-}
-
-#colored {
-    color: var(--secondary-text-color);
-}
-
-.card__container {
-    display: flex;
-    flex-direction: row;
-}
-
-.card__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center; 
-}
-
-
-.row {
-    display: flex;
-    justify-content: center;
-}
-
-.card-img-top {
-    min-height: 150px !important;
-    border-radius: 36px;
-}
-
-
-.skill {
-    color: white;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 20px;
-    padding: 1rem;
-    font-weight: 400;
- }
-
-.skills {
-    background-color: var(--secondary-background-color);
-}
-
-
-.skills img{
-width: 100px;}
-
-footer {
-    background-color: var(--secondary-background-color);
-}
-
-footer a, footer p{
-    color: white;
-}
-
-.container__about p{
-    font-size: var(--p2-text-size);
-    font-family: 'Fredoka', sans-serif;
-    line-height: 1.8rem;
-}
-
-.socials__container {
-    background-color: #DEDEDE;
-}
-
-.socials__container img {
-    width: 50px;
-    margin: 1rem 0; }
-
-    @media (max-width: 468px) {
-        .skills img {
-            padding: 0.75rem;
-        }
-        
-    }
-
-.corner-image--right {
-    position: absolute;
-    top: -100px; 
-    right: -120px; 
-    z-index: 2; 
-}
-
-
-@media (max-width: 1024px) {
-    .corner-image--right, .corner-image--left {
-        display: none;
-    }
-    
-}
-
-.corner-image--left {
-    position: absolute; 
-    left: -110px;
-    top: -90px; 
-    z-index: 2; 
-}
-
-@media (max-width: 1300px) {
-    .corner-image--top-left {
-        top: -220px !important; 
-    }
-}
-
-@media (min-width: 1301px) and (max-width: 1500px) {
-    .corner-image--top-left {
-        top: -150px !important; 
-    }
-}
-
-.corner-image--top-left
-{
-    position: absolute; 
-    left: -20px;
-    top: -90px; 
-    z-index: 2; 
-}
-
-iframe {
-    height: 100%;
-}
-
-.card {
-    min-height: 400px;
-    position: relative;
-    border-radius: 36px;
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.skills__col--first {
-    color: white;
-    font-size: var(--h5-text-size);
-    font-weight: 300;
-    text-align: left;
-    margin-left: 6rem;
-}
-
-@media (max-width: 468px) {
-    .skills__col--first {
-        margin-left: 0;
-    }
-}
-
-.socials__container a{
-    color: black;
-    font-weight: 500;
-}
-
-
-.socials__container a:hover{
-    text-decoration: none !important;
-}
-
-
-.container-fluid.footer__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.text-area {
-    height: 5rem;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-}
-
-.footer__a {
-    color: white;
-    padding: 0.5rem 1rem;
-}
+@import url('../css/buttons/buttons.css');
+@import url('../css/headings/headings.css');
+@import url('../css/spacers/spacers.css');
+@import url('../css/cards/cards.css');
+@import url('../css/footer/footer.css');
+@import url('../css/global/global.css');
+@import url('../css/navigation/navigation.css');
+@import url('../css/skills/skills.css');
+@import url('../css/socials/socials.css');
