--- a/src/css/buttons/buttons.css
+++ b/src/css/buttons/buttons.css
@@ -1,5 +1,6 @@
 .btn--primary, 
-.btn--secondary {
+.btn--secondary,
+.albmissing {
     width: 8.5625rem;
     padding: 1rem 1.5rem;
     justify-content: center;
